--- a/W3.css
+++ b/W3.css
@@ -124,6 +124,7 @@ html {
     overflow-x: hidden
 }
 
+
 h1 {
     font-size: 36px
 }
@@ -225,6 +226,7 @@ a {
     transition: margin-left .4s
 }
 
+/* Horizontal bar */ 
 .w3-bar {
     width: 100%;
     overflow: hidden
@@ -234,7 +236,6 @@ a {
     display: inline-block;
     width: auto
 }
-
 .w3-bar .w3-bar-item {
     padding: 8px 16px;
     float: left;
@@ -248,6 +249,7 @@ a {
     white-space: normal
 }
 
+/* Side bar design */
 .w3-bar-block .w3-bar-item {
     width: 100%;
     display: block;
@@ -268,6 +270,7 @@ a {
     width: 100%
 }
 
+/* Standardized for W3 frame work*/
 .w3-bar:after,
 .w3-bar:before,
 .w3-container:after,
@@ -281,12 +284,14 @@ a {
     clear: both
 }
 
+/* Occupies a part of the window*/
 .w3-third,
 .w3-twothird {
     float: left;
     width: 100%
 }
 
+/* Navbar design when collapse */
 @media (min-width:601px) {
     .w3-third {
         width: 33.33333%
@@ -297,6 +302,7 @@ a {
     }
 }
 
+/* Center content */
 .w3-content {
     margin-left: auto;
     margin-right: auto
@@ -306,6 +312,7 @@ a {
     max-width: 980px
 }
 
+/* Navigation bar - animations */
 .w3-hide {
     display: none !important
 }
@@ -337,6 +344,7 @@ a {
     }
 }
 
+/* Position of elements */
 .w3-bottom,
 .w3-top {
     position: fixed;
@@ -433,23 +441,6 @@ a {
     }
 }
 
-.w3-animate-top {
-    position: relative;
-    animation: animatetop .4s
-}
-
-@keyframes animatetop {
-    from {
-        top: -300px;
-        opacity: 0
-    }
-
-    to {
-        top: 0;
-        opacity: 1
-    }
-}
-
 .w3-animate-left {
     position: relative;
     animation: animateleft .4s
@@ -467,50 +458,8 @@ a {
     }
 }
 
-.w3-animate-right {
-    position: relative;
-    animation: animateright .4s
-}
 
-@keyframes animateright {
-    from {
-        right: -300px;
-        opacity: 0
-    }
-
-    to {
-        right: 0;
-        opacity: 1
-    }
-}
-
-.w3-animate-bottom {
-    position: relative;
-    animation: animatebottom .4s
-}
-
-@keyframes animatebottom {
-    from {
-        bottom: -300px;
-        opacity: 0
-    }
-
-    to {
-        bottom: 0;
-        opacity: 1
-    }
-}
-
-@keyframes animatezoom {
-    from {
-        transform: scale(0)
-    }
-
-    to {
-        transform: scale(1)
-    }
-}
-
+/* Text and font settings */
 .w3-small {
     font-size: 12px !important
 }
@@ -539,6 +488,7 @@ a {
     text-align: center !important
 }
 
+/* Margin. Size, location and padding */
 .w3-margin {
     margin: 16px !important
 }
@@ -612,6 +562,7 @@ a {
     padding-top: 24px !important
 }
 
+/* Decides the location of an element */
 .w3-left {
     float: left !important
 }
@@ -620,6 +571,7 @@ a {
     float: right !important
 }
 
+/* Hover and its color */
 .w3-button:hover {
     color: #000 !important;
     background-color: #ccc !important
@@ -688,7 +640,7 @@ a {
     color: #000 !important
 }
 
-/* My own changes - Albin */
+/* Scroll Animation */
 html {
     scroll-behavior: smooth
 }
@@ -698,27 +650,3 @@ html {
     color: #000000 !important;
     background-color: #fff !important
 }
-
-/* .w3-theme-l5 {color:#000 !important; background-color:#f0f0f0 !important}
-.w3-theme-l4 {color:#000 !important; background-color:#cccccc !important}
-.w3-theme-l3 {color:#fff !important; background-color:#999999 !important}
-.w3-theme-l2 {color:#fff !important; background-color:#666666 !important}
-.w3-theme-l1 {color:#fff !important; background-color:#333333 !important}
-.w3-theme-d1 {color:#fff !important; background-color:#000000 !important}
-.w3-theme-d2 {color:#fff !important; background-color:#000000 !important}
-.w3-theme-d3 {color:#fff !important; background-color:#000000 !important}
-.w3-theme-d4 {color:#fff !important; background-color:#000000 !important}
-.w3-theme-d5 {color:#fff !important; background-color:#000000 !important}
-
-.w3-theme-light {color:#000 !important; background-color:#f0f0f0 !important}
-.w3-theme-dark {color:#fff !important; background-color:#000000 !important}
-.w3-theme-action {color:#fff !important; background-color:#000000 !important}
-
-
-
-.w3-text-theme {color:#000000 !important}
-.w3-border-theme {border-color:#000000 !important}
-
-.w3-hover-theme:hover {color:#fff !important; background-color:#000000 !important}
-.w3-hover-text-theme:hover {color:#000000 !important}
-.w3-hover-border-theme:hover {border-color:#000000 !important} */
